--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.0
+  share_plus: ^11.0.0
+  retrofit: ^4.4.0
+  logger: ^2.4.0  # for logging purpose
+  json_annotation: ^4.9.0
+  dio: ^5.3.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: '>=8.0.0 <10.0.0' # for Dart 3.3 use ^9.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.8.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
