--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   json_annotation: ^4.9.0
   dio: ^5.3.3
   path_provider: ^2.1.1
+  bloc_concurrency: ^0.3.0
+  stream_transform: ^2.1.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
