--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   bloc_concurrency: ^0.3.0
   stream_transform: ^2.1.1
   get_it: ^8.0.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/chart/logo_icon.png
+    - assets/auth/logo_icon.png
 
   # assets:
   #   - images/a_dot_burr.jpeg
