--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   stream_transform: ^2.1.1
   get_it: ^8.0.3
   dartz: ^0.10.1
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
   assets:
     - assets/chart/logo_icon.png
     - assets/auth/logo_icon.png
+    - assets/splash/splash_logo.png
 
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -103,3 +105,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  image: assets/splash/splash_logo.png
+  color: "#FFFFFF"
+  android_12:
+      # Показываем белый экран на системном сплеше android 12+ 
+    image: assets/splash/splash_logo.png
+    color: "#F2EDE7"
