--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/auth/logo_icon.png
     - assets/splash/splash_logo.png
     - assets/icon/icon.png
+    - assets/mvp_charts/
 
   # assets:
   #   - images/a_dot_burr.jpeg
